syntax = "proto3";

option go_package = "proto/items";

package proto;

message Password {
  string name = 1;
  string login = 2;
  string password = 3;
  string metadata = 4;
}

message CardInfo {
  string name = 1;
  string number = 2;
  string expiration_month = 3;
  string expiration_year = 4;
  string cvv = 5;
  string metadata = 6;
}

message TextInfo {
  string name = 1;
  string text = 2;
  string metadata = 3;
}

message Response {
  string error = 1;
}

message EmptyRequest{}

message ListItemResponse {
    repeated Password passwords = 1;
    repeated TextInfo texts = 2;
    repeated CardInfo cards = 3;
    string error = 4;
}

service ItemsManagement {
  rpc AddPassword(Password) returns (Response);
  rpc AddCardInfo(CardInfo) returns (Response);
  rpc AddTextInfo (TextInfo) returns (Response);
  rpc ListItems(EmptyRequest) returns (ListItemResponse);
}
